# htmx-contacthub

./: README.md  build.sh  main.py  package-lock.json  pyproject.toml  render.yaml  requirements.txt
contacthub/: settings.py
contacts/: admin.py  forms.py  models.py  views.py
contacts/migrations/: 0002_contact.py  0003_contact_document.py
contacts/static/styles/: output.css
contacts/templates/: base.html  contacts.html
contacts/templates/partials/: add-contact-modal.html  contact-list.html  contact-row.html
staticfiles/: staticfiles.json
staticfiles/js/: htmx.min.js.br
staticfiles/styles/: output.css  output.css.br
