[project]
name = "htmx-contacthub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "boto3>=1.42.78",
    "dj-database-url>=3.1.2",
    "django==5.1.3",
    "django-extensions==3.2.3",
    "django-storages[s3]>=1.14.6",
    "psycopg2-binary>=2.9.11",
    "sqlparse==0.5.2",
    "tzdata==2024.2",
    "whitenoise[brotli]>=6.12.0",
]
